@startuml
title Follower Robot State Machine - Blob Color Platooning

hide empty description

[*] --> WAIT_FOR_ASSIGNMENT

WAIT_FOR_ASSIGNMENT : stop_motors()
WAIT_FOR_ASSIGNMENT : wait for MQTT assignment
WAIT_FOR_ASSIGNMENT --> GLOBAL_SEARCH : receive ASSIGNMENT\nset initial target/color

GLOBAL_SEARCH : global_detect(current_target_color)
GLOBAL_SEARCH : get fresh Superintendent measurement
GLOBAL_SEARCH : if Superintendent far -> global_search_guided_motion()
GLOBAL_SEARCH : if no Superintendent -> global_search_stop()
GLOBAL_SEARCH --> GLOBAL_APPROACH : target detected\nand Superintendent distance <= 1.10m\npublish TARGET_FOUND_GLOBAL
GLOBAL_SEARCH --> GLOBAL_VISUAL_ACQUIRE : target not detected\nand Superintendent distance <= 1.10m\npublish SUPERINTENDENT_ACQUIRE_RANGE_REACHED
GLOBAL_SEARCH --> GLOBAL_SEARCH : target detected\nbut Superintendent distance > 1.10m
GLOBAL_SEARCH --> GLOBAL_SEARCH : target not detected

GLOBAL_VISUAL_ACQUIRE : global_detect() for initial acquire
GLOBAL_VISUAL_ACQUIRE : local_detect(color, area floor) for local recovery
GLOBAL_VISUAL_ACQUIRE : centre camera and rotate body during local recovery
GLOBAL_VISUAL_ACQUIRE --> GLOBAL_APPROACH : fresh Superintendent measurement\nand target detected\npublish TARGET_FOUND_GLOBAL
GLOBAL_VISUAL_ACQUIRE --> LOCAL_LOCK : locally lost target detected\npublish LOCAL_SEARCH_REACQUIRED
GLOBAL_VISUAL_ACQUIRE --> GLOBAL_SEARCH : Superintendent stale
GLOBAL_VISUAL_ACQUIRE --> GLOBAL_SEARCH : timeout after 60s\npublish GLOBAL_VISUAL_ACQUIRE_TIMEOUT
GLOBAL_VISUAL_ACQUIRE --> GLOBAL_VISUAL_ACQUIRE : target not detected\ncontinue acquire

GLOBAL_APPROACH : global_detect(current_target_color)
GLOBAL_APPROACH : approach current target
GLOBAL_APPROACH --> GLOBAL_SEARCH : target not detected\nand timeout exceeded\npublish TARGET_LOST_GLOBAL
GLOBAL_APPROACH --> GLOBAL_APPROACH : target detected\nbut distance > goal
GLOBAL_APPROACH --> LOCAL_LOCK : reached goal\nand current target == final target
GLOBAL_APPROACH --> WAIT_FOR_FINAL_TARGET_READY : reached wait zone\nbut current target != final target

WAIT_FOR_FINAL_TARGET_READY : stop_motors()
WAIT_FOR_FINAL_TARGET_READY : wait for final target event
WAIT_FOR_FINAL_TARGET_READY --> GLOBAL_SEARCH : final target ready\nswitch to final target/color

LOCAL_LOCK : local_detect(current_target_color)
LOCAL_LOCK : align with target
LOCAL_LOCK : count stable frames
LOCAL_LOCK --> GLOBAL_VISUAL_ACQUIRE : local target not detected\npublish LOCAL_LOCK_FAILED
LOCAL_LOCK --> LOCAL_LOCK : lock not stable yet
LOCAL_LOCK --> LOCAL_FOLLOW : stable lock acquired\npublish LOCAL_LOCK_ACQUIRED\npublish READY

LOCAL_FOLLOW : local_detect(current_target_color)
LOCAL_FOLLOW : local_follow_motion(result)
LOCAL_FOLLOW : publish STATUS every 1s
LOCAL_FOLLOW : action_status=hold means stopped\nand ready for leader resume
LOCAL_FOLLOW --> LOCAL_FOLLOW : target detected\ncontinue following
LOCAL_FOLLOW --> GLOBAL_VISUAL_ACQUIRE : target lost\npublish LOCAL_SEARCH_SCANNING

EMERGENCY_STOP : stop_motors()
EMERGENCY_STOP --> WAIT_FOR_ASSIGNMENT : RESET

WAIT_FOR_ASSIGNMENT --> EMERGENCY_STOP : STOP or EMERGENCY_STOP
GLOBAL_SEARCH --> EMERGENCY_STOP : STOP or EMERGENCY_STOP
GLOBAL_VISUAL_ACQUIRE --> EMERGENCY_STOP : STOP or EMERGENCY_STOP
GLOBAL_APPROACH --> EMERGENCY_STOP : STOP or EMERGENCY_STOP
WAIT_FOR_FINAL_TARGET_READY --> EMERGENCY_STOP : STOP or EMERGENCY_STOP
LOCAL_LOCK --> EMERGENCY_STOP : STOP or EMERGENCY_STOP
LOCAL_FOLLOW --> EMERGENCY_STOP : STOP or EMERGENCY_STOP

@enduml
